# indico-plugins

payment_touchnet/: MANIFEST.in  README.md  pytest.ini  setup.cfg
payment_touchnet/indico_payment_touchnet/: __init__.py  blueprint.py  controllers.py  plugin.py  util.py
payment_touchnet/indico_payment_touchnet/templates/: event_payment_form.html
payment_touchnet/indico_payment_touchnet/translations/zh_Hans_CN/LC_MESSAGES/: messages.poZone.Identifier
payment_touchnet/tests/: controllers_test.py  util_test.py
