[metadata]
name = indico-plugin-payment-touchnet
version = 3.1
description = TouchNet payments for Indico event registration fees
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Danny Squire
author_email = danny.squire@ttu.edu
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9.0
install_requires =
    indico>=3.1

[options.entry_points]
indico.plugins =
    payment_touchnet = indico_payment_touchnet.plugin:TouchNetPaymentPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
